feat: close a case (FPLA-448) (#1187)